--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@coreui/coreui": "^3.4.0",
+    "@coreui/icons": "^1.0.1",
+    "@coreui/vue": "^3.2.7",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/vue-fontawesome": "^2.0.2",
@@ -33,6 +36,9 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^5.0.0",
+    "sass": "^1.32.6",
+    "sass-loader": "7.3.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
