--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
     "vee-validate": "^3.4.5",
     "vue": "^2.6.11",
+    "vue-js-modal": "^2.0.0-rc.6",
     "vue-lodash": "^2.1.2",
+    "vue-moment": "^4.1.0",
     "vue-notification": "^1.3.20",
     "vue-router": "^3.2.0",
     "vuelidate": "^0.7.6",
