--- a/package.json
+++ b/package.json
@@ -15,17 +15,21 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "ant-design-vue": "^1.7.2",
+    "apexcharts": "^3.25.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "moment": "^2.29.1",
     "vee-validate": "^3.4.5",
+    "velocity-animate": "^1.5.2",
     "vue": "^2.6.11",
+    "vue-apexcharts": "^1.6.0",
     "vue-js-modal": "^2.0.0-rc.6",
     "vue-lodash": "^2.1.2",
     "vue-moment": "^4.1.0",
     "vue-notification": "^1.3.20",
+    "vue-numeric-input": "^1.0.6",
     "vue-router": "^3.2.0",
     "vuelidate": "^0.7.6",
     "vuelidate-error-extractor": "^2.4.1",
