--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "vue-notification": "^1.3.20",
     "vue-numeric-input": "^1.0.6",
     "vue-router": "^3.2.0",
+    "vue-toastification": "^1.7.11",
     "vuelidate": "^0.7.6",
     "vuelidate-error-extractor": "^2.4.1",
     "vuex": "^3.4.0"
